# agentic_benchmarks

./: .env.example  .gitignore  README.md  Writing Events Is All You Need benchmark 13022026.html  Writing Events Is All You Need benchmark 1802206.html  benchmark_queries.py  docker-compose.yml  pyproject.toml  requirements.txt  run_benchmark.py
datasets/: download_berka.py  download_bts.py  download_github.py  download_movielens.py  download_olist.py
docker/mcp-kurrentdb/: Dockerfile  http_wrapper.py
docker/mcp-postgres/: Dockerfile  server.js
framework/: __init__.py
framework/agents/: __init__.py  claude.py  judge.py  mcp_retrieval.py  ollama.py
framework/mcp/: __init__.py  client.py  config.py
